--- a/src/app/detail/detail.page.html
+++ b/src/app/detail/detail.page.html
@@ -71,7 +71,7 @@
       <ion-fab-button><a href="tel:{{Users.phone}}"><i class="material-icons appcolor">phone_callback</i></a></ion-fab-button>
         </ion-fab-list>
        <ion-fab-list side="end">
-         <ion-fab-button><i class="material-icons appcolor">message</i></ion-fab-button>
+         <ion-fab-button><i (click)="routeToMessage()" class="material-icons appcolor">message</i></ion-fab-button>
        </ion-fab-list>
        <ion-fab-list side="bottom">
           <ion-fab-button><a href = "mailto:{{Users.email}}"><i class="material-icons appcolor">email</i></a></ion-fab-button>
