--- a/src/app/detail/detail.page.html
+++ b/src/app/detail/detail.page.html
@@ -87,7 +87,7 @@
 
   <div class="newLevel_4">
 
-    <ion-button  expand="block">Send Request</ion-button>
+    <!-- <ion-button  expand="block">Send Request</ion-button> -->
 
   </div>
 
