--- a/src/app/detail/detail.page.scss
+++ b/src/app/detail/detail.page.scss
@@ -48,6 +48,7 @@ $text_size:1.2em;
   height: 79%;
   background-position: center;
   background-repeat: no-repeat;
+  background-size: cover;
 }
 //childrens
 
