--- a/src/app/chat/chat.page.scss
+++ b/src/app/chat/chat.page.scss
@@ -6,16 +6,20 @@ $app_color:#3880ff;
 //friend
 .chat{
   width:100%;
-  height: 100%;
+  //height: 100%;
+  margin-bottom: 8vh;
 }
+
+
 
 .friend{
   width: 100%;
   // background-color: red;
   max-height: 50%;
   min-height: 10%;
-  overflow: hidden;
+  //overflow: hidden;
   margin-top: 5%;
+  margin-bottom: 5%;
 }
 
 .friend_1{
