--- a/src/app/login-modal/login-modal.page.html
+++ b/src/app/login-modal/login-modal.page.html
@@ -1,11 +1,13 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Registration</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
-  <ion-button (click)="dismiss()">close Modal</ion-button>
 
-  
+
+
+
+
+  <div class="w_text">Please Enter with Google</div>
+
+  <div class="googleLogin"(click)="trigger()"></div>
+
+
+
 </ion-content>
