--- a/src/app/selectrole/selectrole.page.html
+++ b/src/app/selectrole/selectrole.page.html
@@ -1,4 +1,28 @@
 
 <ion-content>
-<ion-button (click)="dismiss()">close Modal</ion-button>
+
+
+<div class="main_cl">
+
+<div class="selectrole">Select your Role</div>
+
+<div class="upbutton">
+  <ion-button (click)="Find()" expand="block">Find a person to deliver</ion-button>
+</div>
+
+<div class="upbutton2">
+  <ion-button (click)="Get()" expand="block">Get the goods along the way</ion-button>
+</div>
+
+
+
+</div>
+
+
+
+
+
+
+<!-- <ion-button (click)="dismiss()">close Modal</ion-button> -->
+
 </ion-content>
