--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,7 @@
             <ion-col size="12">
                   <h4 style="margin-top:0px;margin-bottom:0px;" class="userName" text-center>Sunny Yoall</h4>
                   <p style="margin-top:0px;color:#C40C1F;" text-center><b>User</b></p>
-                  <p  text-center>Settings</p>
+                  <!-- <p  text-center>Settings</p> -->
             </ion-col>
 
           </ion-row>
@@ -42,8 +42,11 @@
 
             <ion-item class="logininput">
               <ion-label >
-                    <ion-button id="customBtn">Registration / Login</ion-button>
+                    <div id="customBtn">Registration / Login</div>
               </ion-label>
+              <i class="menu-size material-icons" slot="end">
+                supervised_user_circle
+                </i>
             </ion-item>
             <ion-item>
               <ion-label><ion-button (click)="autoClose()" routerLink="/contacts" >Messages</ion-button></ion-label>
@@ -51,7 +54,7 @@
             <ion-item>
               <ion-label><ion-button (click)="autoClose()" routerLink="/favorite" >Favorite</ion-button></ion-label>
             </ion-item>
-            <ion-item>
+            <!-- <ion-item>
               <ion-label>Личный кабинет</ion-label>
             </ion-item>
 
@@ -63,7 +66,7 @@
             </ion-item>
             <ion-item>
               <ion-label>Предложить друзьям</ion-label>
-            </ion-item>
+            </ion-item> -->
 
         </ion-list>
 
