--- a/src/app/slideshow/slideshow.page.html
+++ b/src/app/slideshow/slideshow.page.html
@@ -88,11 +88,11 @@
 
 
           </ion-slide>
-          <ion-slide>
+          <!-- <ion-slide>
             <h1>Slide 2</h1>
           </ion-slide>
           <ion-slide>
             <h1>Slide 3</h1>
-          </ion-slide>
+          </ion-slide> -->
         </ion-slides>
 </ion-content>
