--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
 
             </ion-col>
             <ion-col size="6">
-                  <img style="margin-top:25px;" class="circle" src="http://kazpoisk.kz/assets/entry/uploads/1a8a0bf4a784da40b765a3875fbedd11.jpg">
+                  <img style="margin-top:25px;" class="circle" src="assets/icon/defaultava.png">
           </ion-col>
             <ion-col size="3"></ion-col>
 
