--- a/src/app/login-modal/login-modal.page.scss
+++ b/src/app/login-modal/login-modal.page.scss
@@ -28,7 +28,7 @@ ion-content{
   background-repeat: no-repeat;
   background-size: cover;
   width: 50%;
-  height: 5%;
+  height: 2em;
   border-radius: 10px;
   margin-top:5%;
   margin-left: 25%;
