--- a/src/app/myrequest/myrequest.page.scss
+++ b/src/app/myrequest/myrequest.page.scss
@@ -299,31 +299,31 @@ $header_textColor:#337eff;
 
 //childrens
 .Rlevel2_child1{
-  width:33.3%;
+  width:100%;
   height:100%;
 }
 
-.Rlevel2_child2{
-  width:33.3%;
-  height:100%;
-
-}
-
-.Rlevel2_child3{
-  width:33.3%;
-  height:100%;
-}
+// .Rlevel2_child2{
+//   width:33.3%;
+//   height:100%;
+//
+// }
+//
+// .Rlevel2_child3{
+//   width:33.3%;
+//   height:100%;
+// }
 //childrens
 //childrens
 .Rlevel2_child1_child1{
   width:100%;
-  height:50%;
+  height:40%;
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
   font-size: 0.9em;
   font-weight: 600;
-  padding-top: 13%;
+  padding-top: 5%;
   text-align: center;
   color:$theme_color;
   opacity: 0.6;
@@ -344,5 +344,11 @@ $header_textColor:#337eff;
   text-transform:uppercase;
 }
 //childrens
+
+//below status block
+
+//below status block
+
+
 
 //block below
