--- a/src/app/slideshow/slideshow.page.html
+++ b/src/app/slideshow/slideshow.page.html
@@ -7,9 +7,9 @@
               <div class="main_slide">
 
                 <div class="fr_parent">
-                  <div class="fr_im">
+                  <!-- <div class="fr_im">
 
-                  </div>
+                  </div> -->
                 </div>
 
                 <div class="newlist">
