--- a/src/app/add-first-action/add-first-action.page.scss
+++ b/src/app/add-first-action/add-first-action.page.scss
@@ -14,3 +14,14 @@ ion-content{
     padding:0px;
     background-color: #b3e0ff;
 }
+
+
+
+
+.example-full-width {
+  width: 100%;
+}
+
+.mn5{
+  margin-top:4%;
+}
